# wasp-contract-example

./: README.md  deploy.sh  go.mod  go.sum  wasp-cli.json
client/recorder_client/: Cargo.toml  main.go
client/recorder_client/src/: main.rs
client/swap_client/: Cargo.toml  main.go
client/swap_client/src/: main.rs
contracts/: build.sh  deploy.sh
contracts/recorder/: schema.yaml
contracts/recorder/go/: main.go
contracts/recorder/go/recorder/: consts.go  contract.go  eventhandlers.go  events.go  results.go
contracts/recorder/go/recorderimpl/: funcs.go  thunks.go
contracts/recorder/rs/recorder/src/: consts.rs  contract.rs  eventhandlers.rs  events.rs  lib.rs  (+1 more)
contracts/recorder/rs/recorderimpl/: Cargo.toml
contracts/recorder/rs/recorderwasm/: Cargo.toml
contracts/recorder/test/: recorder_test.go
contracts/swap/: schema.yaml
contracts/swap/go/: main.go
contracts/swap/go/swap/: consts.go  contract.go  eventhandlers.go  events.go  results.go  state.go
contracts/swap/go/swapimpl/: funcs.go  thunks.go
contracts/swap/rs/swap/: Cargo.toml
contracts/swap/rs/swapwasm/: Cargo.toml
contracts/swap/test/: swap_test.go
recorder/: schema.yaml
recorder/rs/recorder/: Cargo.toml  README.md
recorder/rs/recorder/src/: consts.rs  contract.rs  eventhandlers.rs  lib.rs
recorder/rs/recorderimpl/: Cargo.toml  README.md
recorder/rs/recorderimpl/src/: funcs.rs  thunks.rs
recorder/rs/recorderwasm/: README.md
recorder/rs/recorderwasm/src/: lib.rs
swap/: schema.yaml
swap/rs/swap/: README.md
swap/rs/swap/src/: consts.rs  contract.rs  lib.rs
swap/rs/swapimpl/: Cargo.toml  README.md
swap/rs/swapimpl/src/: funcs.rs  thunks.rs
swap/rs/swapwasm/: README.md
swap/rs/swapwasm/src/: lib.rs
swap/test/: swap_test.go
(+13 files in other folders)
