[package]
name = "recorder_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-client = { git = "https://github.com/iotaledger/iota.rs", branch = "develop" }
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", branch = "dev", default-features = false, features = [ "std", "chacha", "blake2b", "ed25519", "random", "slip10", "bip39", "bip39-en" ] }
wasmlib = { git = "https://github.com/iotaledger/wasp", branch = "develop" }
wasmclient = { git = "https://github.com/iotaledger/wasp.git", branch = "develop" }
recorder = { path = "../../contracts/recorder/rs/recorder" }
serde_json = "1.0.94"
serde = { version = "1.0.155", features = ["derive"] }
