[package]
name = "swap_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-client = { git = "https://github.com/iotaledger/iota.rs", branch = "develop" }
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", branch = "dev", default-features = false, features = [ "blake2b", "ed25519" ] }
#wasmlib = { git = "https://github.com/iotaledger/wasp", branch = "develop" }
#wasmclient = { git = "https://github.com/iotaledger/wasp", branch = "develop" }
wasmlib = { path = "../../../wasp/packages/wasmvm/wasmlib"  }
wasmclient = { path = "../../../wasp/packages/wasmvm/wasmclient"  }
swap = { path = "../../contracts/swap/rs/swap" }
serde_json = "1.0.94"
serde = { version = "1.0.155", features = ["derive"] }
